# terminal_animation

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
docs/: ARCHITECTURE.md  RENDERING_PIPELINE.md
src/: animation_ui.cpp  animation_ui.hpp  common.cpp  common.hpp  image_to_ascii.hpp  main.cpp  media_to_ascii.cpp  media_to_ascii.hpp  slider_with_callback.hpp  video_to_ascii.cpp  video_to_ascii.hpp
tests/: common_test.cpp
